Bug 1221104 - Revoke 'midi' permission queries with TypeError. r=baku

According to the spec, we should reject unsupported permissions with a
TypeError. This removes the 'midi' entry entirely so that we get the expected
behaviour.